Switched to 1317 instead of custom RPC

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,7 +59,7 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-<footer class="footer">
+<footer class="footer" style="background: #202225;">
   <div class="content has-text-centered">
     <p>
       Coris - 2019
