--- a/src/app/validator/validator.component.html
+++ b/src/app/validator/validator.component.html
@@ -10,7 +10,8 @@
           </div>
           <div class="message-body">
             <h3>Validator {{(appState | async).validators[selectedValidator].data?.description.moniker}}</h3>
-            <h3>Address {{(appState | async).validators[selectedValidator].address}}</h3>
+            <h4>Address: {{(appState | async).validators[selectedValidator].address}}</h4>
+            <h4>Operator: Address {{(appState | async).validators[selectedValidator].data?.operator_address}}</h4>
             <h4>Description</h4>
             <p>Details {{(appState | async).validators[selectedValidator].data?.description.details}}</p>
             <p>Website {{(appState | async).validators[selectedValidator].data?.description.website}}</p>
@@ -20,8 +21,13 @@
             <h4>Comission</h4>
             <p>Max. change rate {{(appState | async).validators[selectedValidator].data?.commission.max_change_rate}}</p>
             <p>Max. rate {{(appState | async).validators[selectedValidator].data?.commission.max_rate}}</p>
-            <p>Delegator shares {{(appState | async).validators[selectedValidator].data?.commission.delegator_shares}}</p>
             <p>Rate {{(appState | async).validators[selectedValidator].data?.commission.rate}}</p>
+            <h4>Delegations</h4>
+            <div *ngFor="let deleg of delegationInfo; let i = index">
+              <p>{{i+1}}.</p> 
+              <p>{{deleg.delegator_address}}</p>  
+              <p>Shares {{deleg.shares}}</p>  
+            </div>
             <table class="table is-fullwidth is-striped">
               <tbody>
                 <tr>
