--- a/src/app/blocks/blocks.component.html
+++ b/src/app/blocks/blocks.component.html
@@ -1,3 +1,15 @@
+<div class="field has-addons">
+  <div class="control">
+    <input class="input" placeholder = "Enter block height" #queryInputRef >
+  </div>
+  <div class="control">
+    <a 
+      class = "button is-info" 
+      (click) = 'clickButton(queryInputRef.value)' >
+        Search
+    </a>
+  </div>
+</div>
 <div class="card events-card">
   <header class="card-header">
     <p class="card-header-title"><i class="fas fa-vector-square"></i>Blocks</p>
