Delegation post routes fixes: WiP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" routerLink="/validators">Validators</a>
-      <a class="navbar-item brand-text" routerLink="/dashboard">Dashboard</a>
+      <!-- <a class="navbar-item brand-text" routerLink="/dashboard">Dashboard</a> -->
       <a class="navbar-item" routerLink="/blocks">Blocks</a>
       <a class="navbar-item" routerLink="/txs">Txs</a>
     </div>
