--- a/src/app/validator/validator.component.html
+++ b/src/app/validator/validator.component.html
@@ -22,17 +22,19 @@
             <p>Max. change rate {{(appState | async).validators[selectedValidator].data?.commission.max_change_rate}}</p>
             <p>Max. rate {{(appState | async).validators[selectedValidator].data?.commission.max_rate}}</p>
             <p>Rate {{(appState | async).validators[selectedValidator].data?.commission.rate}}</p>
-            <h4>Delegations</h4>
+            <h3>Delegations</h3>
             <div *ngFor="let deleg of delegationInfo; let i = index">
-              <p>{{i+1}}.</p> 
+              <h4>{{i+1}}. Accounts</h4> 
               <p>{{deleg.delegator_address}}</p>  
               <p>Shares {{deleg.shares}}</p>  
+              <a class="button is-dark" routerLink="/new/tx/{{deleg.delegator_address}}">Delegate</a>
               <h5>Txs</h5>
               <div *ngFor="let tx of deleg.txs; let i2 = index">
                 <p>Hash {{tx.txhash}}</p>
                 <p>Height {{tx.height}}</p>
                 <a routerLink="/tx/{{tx.txhash}}">View</a>
               </div>
+              <br>
             </div>
             <table class="table is-fullwidth is-striped">
               <tbody>
