--- a/src/app/validators/validators.component.css
+++ b/src/app/validators/validators.component.css
@@ -1,3 +1,109 @@
+/*-------------------------------------------------*/
+/* Basic Setup */
+/*-------------------------------------------------*/
+html, body {
+  font-size: 20px;
+  line-height: 1.5;
+  height: 100%;
+  background: #111923;
+  color: white;
+  font-family: 'Lato', 'Arial', sans-serif;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
+}
+
+.clearfix {zoom: 1;}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
+/*-------------------------------------------------*/
+/* Reusable Components */
+/*-------------------------------------------------*/
+.row {
+  max-width: 1140px;
+  margin: 0 auto;
+
+}
+
+section {
+  padding: 20px 0;
+}
+
+.box {
+  padding: 1%;
+}
+
+/*-------------------------------------------------*/
+/* Heading */
+/*-------------------------------------------------*/
+h1,
+h2,
+h3 {
+    font-weight: 300;
+    /* text-transform: uppercase; */
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-size: 200%;
+  /* word-spacing: 3px;
+  letter-spacing: 1px; */
+}
+
+h2 {
+  font-size: 150%;
+  word-spacing: 2px;
+  text-align: left;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+h3 {
+  font-size: 110%;
+  margin-bottom: 15px;
+}
+
+/*-------------------------------------------------*/
+/* Paragraphs */
+/*-------------------------------------------------*/
+p {
+  font-size: 110%;
+  text-align: center;
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+}
+
+/*-------------------------------------------------*/
+/* Links */
+/*-------------------------------------------------*/
+a:link,
+a:visited {
+    color: white;
+    text-decoration: none;
+    /* padding-bottom: 10px; */
+    /* border-bottom: 1px solid #e67e22; */
+    transition: color 0.2s;
+}
+
+a:hover,
+a:active {
+    color:orange;
+    /* border-bottom: 1px solid transparent; */
+}
+
+
+
 table {
   table-layout: fixed;
   /*width: 100px;*/
@@ -9,7 +115,7 @@ td {
   text-overflow: ellipsis;
 }
 
-.validator_card{
+.validator-card{
   padding: 1rem;
 }
 
@@ -17,20 +123,21 @@ td {
   box-shadow: inset 0 0 10px rgb(24, 24, 24);
 }
 
-.validator_header{
-  background: #202225;
+.validator-card-header{
+  background: #00796B;
   color: #F7F7F7;
   display: flex;
   align-items: center;
   padding: 1rem;
 }
 
-.validator__text{
-  background: #36393F;
+.validator-card-text{
+  /* background: #36393F; */
   color: #F7F7F7;
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  
 }
 
 .validator__text--body{
