--- a/src/app/validators/validators.component.html
+++ b/src/app/validators/validators.component.html
@@ -1,4 +1,5 @@
-<div
+<div class="row">
+  <div
   *ngFor="let validator of (appState | async).validators"
   class="validator-card"
   id="{{validator.keys?.Addres}}">
@@ -30,3 +31,7 @@
       </div>
     </article>
 </div>
+</div>
+
+
+
