--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -2,7 +2,7 @@
 /* Reusable Components */
 /*-------------------------------------------------*/
 .row {
-  max-width: 1140px;
+  max-width: 90%;
   margin: 0 auto;
 
 }
