--- a/src/app/txs/txs.component.css
+++ b/src/app/txs/txs.component.css
@@ -1,3 +1,12 @@
+/*-------------------------------------------------*/
+/* Reusable Components */
+/*-------------------------------------------------*/
+.row {
+  max-width: 90%;
+  margin: 0 auto;
+
+}
+
 table {
   table-layout: fixed;
   /*width: 100px;*/
@@ -13,6 +22,19 @@ button {
   margin: 15px;
 }
 
-nav {
-  justify-content: center;
+.card-header {
+  background: #00796B;
+}
+
+.clickable:nth-child(odd){
+  background:#0D151F;
+}
+
+.clickable:nth-child(even){
+  background:#111923;
+}
+
+p,
+tbody {
+  color: white;
 }
