--- a/src/app/validators/validators.component.html
+++ b/src/app/validators/validators.component.html
@@ -9,27 +9,31 @@
     id="{{validator.keys?.Addres}}">
       <article class="validator_body">
         <div class="validator-card-header">
-          <i class="fab fa-codepen"></i>
+          <i *ngIf="!validator.jailed" class="fas fa-user-check"></i>
+          <i *ngIf="validator.jailed" class="fas fa-skull-crossbones"></i>
           <p>Validator</p>
         </div>
         <div class="validator-card-text">
           <figure class="image is-128x128" *ngIf="validator.keybase">
-            <img  *ngIf="!validator.picture; else elseBlock" src="https://ui-avatars.com/api/?size=128&name={{validator.data?.description.moniker}}" alt="avatar">
+            <img  *ngIf="!validator.picture; else elseBlock" 
+              src="https://ui-avatars.com/api/?size=128&name={{validator.description.moniker}}" 
+              alt="avatar"
+            >
             <ng-template #elseBlock>
               <img src="{{validator.picture}}" alt="avatar">
             </ng-template>
           </figure>
           <div class="validator__text--body">
             <p>Moniker:</p>
-            <p>{{validator.data?.description.moniker}}</p>
+            <p>{{validator.description.moniker}}</p>
           </div>
           <div class="validator__text--body">
               <p>Power:</p>
-              <p>{{validator.voting_power}}</p>
+              <p>{{validator.ranking?.voting_power}}</p>
           </div>
           <div class="validator__text--body">
               <p>Priority:</p>
-              <p>{{validator.proposer_priority}}</p>
+              <p>{{validator.ranking?.proposer_priority}}</p>
           </div>
           <table class="">
             <tbody>
