--- a/src/app/txs/txs.component.html
+++ b/src/app/txs/txs.component.html
@@ -26,10 +26,10 @@
             <th>Height</th>
           </tr>
           <tr *ngIf="!txs?.length">
-            <td>No recent txs</td>
+            <td style="color: black">No recent txs</td>
           </tr>
         </tbody>
-          <tr #elseBlock routerLink="/tx/{{tx.hash}}" class="clickable" *ngFor="let tx of txs">
+          <tr routerLink="/tx/{{tx.hash}}" class="clickable" *ngFor="let tx of txs">
             <td>{{tx.hash}}</td>
             <td>{{tx.gasUsed}}</td>
             <td>{{tx.gasWanted}}</td>
