--- a/src/app/validators/validators.component.html
+++ b/src/app/validators/validators.component.html
@@ -13,6 +13,12 @@
           <p>Validator</p>
         </div>
         <div class="validator-card-text">
+          <figure class="image is-128x128" *ngIf="validator.keybase">
+            <img  *ngIf="!validator.picture; else elseBlock" src="https://ui-avatars.com/api/?size=128&name={{validator.data?.description.moniker}}" alt="avatar">
+            <ng-template #elseBlock>
+              <img src="{{validator.picture}}" alt="avatar">
+            </ng-template>
+          </figure>
           <div class="validator__text--body">
             <p>Moniker:</p>
             <p>{{validator.data?.description.moniker}}</p>
