WiP: woriking on new mapping; validator component improvements

--- a/src/app/validator/validator.component.html
+++ b/src/app/validator/validator.component.html
@@ -9,7 +9,7 @@
             <p>Validator</p>
           </div>
           <div class="message-body">
-            <h3>Validator {{(appState | async).validators[selectedValidator].data?.description.moniker}}</h3>
+            <!-- <h3>Validator {{(appState | async).validators[selectedValidator].data?.description.moniker}}</h3>
             <h4>Address: {{(appState | async).validators[selectedValidator].address}}</h4>
             <h4>Operator: Address {{(appState | async).validators[selectedValidator].data?.operator_address}}</h4>
             <h4>Description</h4>
@@ -35,7 +35,7 @@
                 <a routerLink="/tx/{{tx.txhash}}">View</a>
               </div>
               <br>
-            </div>
+            </div> -->
             <table class="table is-fullwidth is-striped">
               <tbody>
                 <tr>
